--- a/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
+++ b/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
@@ -288,6 +288,70 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >mips_cpu|dp|jr_pc_mux</TD>
+<TD >65</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >32</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|ra1_mux</TD>
+<TD >65</TD>
+<TD >90</TD>
+<TD >0</TD>
+<TD >90</TD>
+<TD >32</TD>
+<TD >90</TD>
+<TD >90</TD>
+<TD >90</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|wa_mux</TD>
+<TD >11</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >5</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|wd_mux</TD>
+<TD >65</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >32</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mips_cpu|dp|alu</TD>
 <TD >67</TD>
 <TD >0</TD>
@@ -386,13 +450,13 @@
 <TR >
 <TD >mips_cpu|dp|rf</TD>
 <TD >49</TD>
+<TD >35</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >35</TD>
 <TD >64</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >35</TD>
+<TD >35</TD>
+<TD >35</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -402,13 +466,13 @@
 <TR >
 <TD >mips_cpu|dp|pcmux</TD>
 <TD >65</TD>
-<TD >2</TD>
+<TD >33</TD>
 <TD >0</TD>
-<TD >2</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -499,7 +563,7 @@
 <TD >mips_cpu|dp</TD>
 <TD >77</TD>
 <TD >0</TD>
-<TD >6</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >97</TD>
 <TD >0</TD>
@@ -529,7 +593,7 @@
 </TR>
 <TR >
 <TD >mips_cpu|c|md</TD>
-<TD >6</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
