IF/ID 플립플롭 생성

--- a/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
+++ b/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
@@ -288,6 +288,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >mips_cpu|dp|IFID1</TD>
+<TD >35</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >32</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|IF_ID_inst</TD>
+<TD >35</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >32</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mips_cpu|dp|jr_pc_mux</TD>
 <TD >65</TD>
 <TD >2</TD>
@@ -565,7 +597,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >97</TD>
+<TD >129</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
