--- a/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
+++ b/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
@@ -464,22 +464,6 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >mips_cpu|dp|ID_EX_shiftedimm</TD>
-<TD >34</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
 <TD >mips_cpu|dp|ID_EX_inst_2</TD>
 <TD >34</TD>
 <TD >58</TD>
@@ -864,15 +848,47 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >mips_cpu|c|ID_EX_inst_3</TD>
+<TD >34</TD>
+<TD >57</TD>
+<TD >0</TD>
+<TD >57</TD>
+<TD >32</TD>
+<TD >57</TD>
+<TD >57</TD>
+<TD >57</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|c|ID_EX_C_aluop</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mips_cpu|c|ad</TD>
 <TD >8</TD>
+<TD >6</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >6</TD>
 <TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
