EX_MEM 일단 완료(잘못한곳 있을듯)

--- a/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
+++ b/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
@@ -288,7 +288,87 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >mips_cpu|dp|ID_EX_rd2</TD>
+<TD >mips_cpu|dp|EX_MEM_C_memwrite</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_C_branch</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_C_memtoreg</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_C_regwrite</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_wrmux</TD>
+<TD >34</TD>
+<TD >58</TD>
+<TD >0</TD>
+<TD >58</TD>
+<TD >32</TD>
+<TD >58</TD>
+<TD >58</TD>
+<TD >58</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_rd2</TD>
 <TD >34</TD>
 <TD >31</TD>
 <TD >0</TD>
@@ -297,6 +377,70 @@
 <TD >31</TD>
 <TD >31</TD>
 <TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_alu_zero</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_alu</TD>
+<TD >34</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >32</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_pcadd2</TD>
+<TD >34</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >32</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|ID_EX_rd2</TD>
+<TD >34</TD>
+<TD >62</TD>
+<TD >0</TD>
+<TD >62</TD>
+<TD >32</TD>
+<TD >62</TD>
+<TD >62</TD>
+<TD >62</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -562,13 +706,13 @@
 <TR >
 <TD >mips_cpu|dp|jr_pc_mux</TD>
 <TD >65</TD>
-<TD >2</TD>
+<TD >33</TD>
 <TD >0</TD>
-<TD >2</TD>
+<TD >33</TD>
 <TD >32</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -594,13 +738,13 @@
 <TR >
 <TD >mips_cpu|dp|wa_mux</TD>
 <TD >11</TD>
-<TD >5</TD>
+<TD >9</TD>
 <TD >0</TD>
+<TD >9</TD>
 <TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -626,13 +770,13 @@
 <TR >
 <TD >mips_cpu|dp|alu</TD>
 <TD >67</TD>
-<TD >31</TD>
+<TD >62</TD>
 <TD >0</TD>
-<TD >31</TD>
+<TD >62</TD>
 <TD >33</TD>
-<TD >31</TD>
-<TD >31</TD>
-<TD >31</TD>
+<TD >62</TD>
+<TD >62</TD>
+<TD >62</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -642,13 +786,13 @@
 <TR >
 <TD >mips_cpu|dp|srcbmux</TD>
 <TD >65</TD>
+<TD >31</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >31</TD>
 <TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -754,13 +898,13 @@
 <TR >
 <TD >mips_cpu|dp|pcbrmux</TD>
 <TD >65</TD>
+<TD >31</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >31</TD>
 <TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
