--- a/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
+++ b/new_MIPS_design/MIPS_design/MIPS_System_Syn/db/MIPS_System.lpc.html
@@ -288,6 +288,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >mips_cpu|hd</TD>
+<TD >16</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|hzmux</TD>
+<TD >19</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >9</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mips_cpu|dp|MEM_WB_C_memtoreg</TD>
 <TD >3</TD>
 <TD >0</TD>
@@ -361,6 +393,22 @@
 <TD >31</TD>
 <TD >31</TD>
 <TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|EX_MEM_C_memwrite</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -505,6 +553,22 @@
 <TD >31</TD>
 <TD >31</TD>
 <TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mips_cpu|dp|ID_EX_C_memwrite</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -674,13 +738,13 @@
 <TR >
 <TD >mips_cpu|dp|IF_ID_pcplus4</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -690,13 +754,13 @@
 <TR >
 <TD >mips_cpu|dp|IF_ID_inst</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -961,7 +1025,7 @@
 </TR>
 <TR >
 <TD >mips_cpu|dp|pcreg</TD>
-<TD >34</TD>
+<TD >35</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -977,27 +1041,11 @@
 </TR>
 <TR >
 <TD >mips_cpu|dp</TD>
-<TD >77</TD>
+<TD >79</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >129</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >mips_cpu|c|EX_MEM_C_memwrite</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
+<TD >132</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1009,22 +1057,6 @@
 </TR>
 <TR >
 <TD >mips_cpu|c|EX_MEM_C_branch</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >mips_cpu|c|ID_EX_C_memwrite</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
